--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,57 +1,91 @@
-name: Generate Contribution Snake
+name: Generate Contribution Snake (debug + artifact + commit)
 
+# Allow manual runs for quick testing
 on:
+  workflow_dispatch:
   schedule:
-    - cron: '0 0 * * *'   # daily at 00:00 UTC
+    - cron: '0 0 * * *'
   push:
-    branches:
-      - main
-      - master
+    branches: [ main, master ]
+
+# Ensure the workflow can write to repo
+permissions:
+  contents: write
 
 jobs:
   generate-snake:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repo
+      - name: Checkout repo (full history)
         uses: actions/checkout@v4
         with:
           persist-credentials: true
+          fetch-depth: 0
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 18
 
-      - name: Ensure output dir
-        run: mkdir -p output
+      - name: Create output dir
+        run: |
+          mkdir -p output
+          echo "output dir created: $(pwd)/output"
+          ls -la .
 
       - name: Try generate snake via npx (primary)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -e
-          echo "Attempting npx github-contribution-grid-snake..."
+          echo "Attempting: npx github-contribution-grid-snake -u ${{ github.repository_owner }} -o output/github-contribution-grid-snake.svg"
           if npx --yes github-contribution-grid-snake -u ${{ github.repository_owner }} -o output/github-contribution-grid-snake.svg; then
             echo "Generated with github-contribution-grid-snake"
           else
-            echo "Primary CLI failed, attempting alternative npx commands..."
-            # Try '@platane/snk' (alternate package name)
-            if npx --yes @platane/snk -u ${{ github.repository_owner }} -o output/github-contribution-grid-snake.svg; then
-              echo "Generated with @platane/snk"
-            else
-              echo "Both npx attempts failed. Please open an issue or message me and I'll provide a maintained action variant."
-              exit 0
-            fi
+            echo "Primary generator failed (non-fatal), will try alternative"
+          fi
+          echo "Trying alternative generator: @platane/snk"
+          if npx --yes @platane/snk -u ${{ github.repository_owner }} -o output/github-contribution-grid-snake.svg; then
+            echo "Generated with @platane/snk"
+          else
+            echo "Both generators returned non-zero exit codes or are unavailable. Check logs above for errors."
           fi
 
-      - name: Commit & push generated SVG
+      - name: Show output directory contents (debug)
+        run: |
+          echo "Listing output/"
+          ls -la output || echo "output directory does not have files"
+          echo "If file exists, print first 20 lines (for quick verification):"
+          if [ -f output/github-contribution-grid-snake.svg ]; then
+            echo ">>> File exists: output/github-contribution-grid-snake.svg"
+            head -n 20 output/github-contribution-grid-snake.svg || true
+          else
+            echo ">>> File NOT found: output/github-contribution-grid-snake.svg"
+          fi
+
+      - name: Upload generated SVG as artifact (so you can download it from Actions UI)
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: contribution-snake-artifact
+          path: output/github-contribution-grid-snake.svg
+
+      - name: Commit & push generated SVG (if changed)
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add output/github-contribution-grid-snake.svg || true
+
+          # Show git status
+          git status --porcelain || true
+          git add -f output/github-contribution-grid-snake.svg || true
+
+          # If there are staged changes, commit and push
           if git diff --cached --quiet; then
-            echo "No changes to commit"
+            echo "No changes to commit (file either unchanged or missing)."
           else
+            echo "Staged changes ready to commit:"
+            git --no-pager diff --cached --name-only || true
             git commit -m "chore: update contribution-snake [skip ci]" || true
-            git push
+            echo "Pushing to $GITHUB_REF"
+            git push origin HEAD:$GITHUB_REF || (echo "Push failed — printing remote info" && git remote -v && exit 1)
           fi
